--- a/src/main/resources/templates/layout/forgotPassword.html
+++ b/src/main/resources/templates/layout/forgotPassword.html
@@ -229,7 +229,7 @@
                     .then(response => response.json())
                     .then(data => {
                         if (!data.exists) {
-                            document.getElementById('staff_id_error').innerText = "The provided staff-id doesn't exist in our server";
+                            document.getElementById('staff_id_error').innerText = "please enter the staff-Id";
                             document.getElementById('email_otp_password_fields').style.display = 'none';
                         } else {
                             if (data.dobIsNull) {
