--- a/src/main/resources/templates/layout/searchPage.html
+++ b/src/main/resources/templates/layout/searchPage.html
@@ -181,7 +181,7 @@
           <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-post-search" role="tabpanel" aria-labelledby="pills-post-search-tab">...</div>
             <div class="tab-pane fade" id="pills-event-search" role="tabpanel" aria-labelledby="pills-event-search-tab">...</div>
-            <div class="tab-pane fade" id="pills-poll-search" role="tabpanel" aria-labelledby="pills-poll-search-tab">...</div>
+            <div class="tab-pane fade" id="pills-poll-search" role="tabpanel" aria-labelledby="pills-poll-search-tab" style="width: 530px">...</div>
             <div class="tab-pane fade" id="pills-user-search" role="tabpanel" aria-labelledby="pills-user-search-tab"> 
             </div>
             <div class="tab-pane fade" id="pills-community-search" role="tabpanel" aria-labelledby="pills-community-search-tab">
