--- a/src/main/resources/templates/user/user-details-post.html
+++ b/src/main/resources/templates/user/user-details-post.html
@@ -15,7 +15,7 @@
             <button class="nav-link active" id="postDetails-tab"  data-bs-toggle="tab" data-bs-target="#postDetailsTab" type="button" role="tab" aria-controls="PostDetailsTab" aria-selected="true">Post Details</button>
         </li>
     </ul>
-    <div class="tab-content" id="myTabContent">
+    <div class="tab-content" id="myTabContent" style="width: 550px">
         <div class="tab-pane fade show active" id="postDetailsTab" role="tabpanel" aria-labelledby="postDetails-tab">
             <div id="postDetailsForSingleForPost"  class=""></div>
         </div>
