--- a/src/main/resources/static/assets/css/loading.css
+++ b/src/main/resources/static/assets/css/loading.css
@@ -1009,7 +1009,7 @@ code {
     width: auto;
     height: auto;
     object-fit: contain;
-} */ */
+} */
 
 .superCarousel {
     display: inline-flex; /* Makes the container fit its content */
