--- a/src/main/resources/templates/user/user-profile.html
+++ b/src/main/resources/templates/user/user-profile.html
@@ -15,8 +15,11 @@
             /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             background: linear-gradient(to right, rgba(251, 194, 235, 1), rgba(166, 193, 238, 1))
         }
+        body.dark-mode {
+            background-color: #1e1e1e;
+            color: #fff;
+        }
 
-        /* Additional styling */
         .edit-button {
             position: absolute;
             top: 50%;
@@ -28,6 +31,15 @@
 
         .edit-button:hover {
             opacity: 1;
+        }
+        body.dark-mode .edit-button {
+            color: #fff;
+            background-color: transparent;
+            border: 1px solid #fff;
+        }
+
+        body.dark-mode .edit-button:hover {
+            background-color: #555;
         }
     </style>
 </head>
@@ -66,7 +78,7 @@
                                 <p th:text="${user.role}">Role</p>
                             </div>
                         </div>
-                        <div class="p-4 text-black" style="background-color: #f8f9fa;">
+                        <div class="p-4 text-black" >
                             <div class="d-flex justify-content-end text-center py-1">
                                 <div>
                                     <p class="mb-1 h5"><i class="fa-solid fa-circle-info" data-bs-toggle="modal" data-bs-target="#userAccessLogStaticBox" onclick="getAccessLogData()"></i></p>
@@ -75,7 +87,7 @@
                         </div>
                         <div class="card-body p-4 text-black">
                             <div class="mb-5">
-                                <div class="p-4" style="background-color: #f8f9fa;">
+                                <div class="p-4">
                                 <ul class="nav nav-tabs my-3" id="myTab" role="tablist">
                                     <li class="nav-item" role="presentation">
                                         <button class="nav-link active"  id="newsfeed-tab"  data-bs-toggle="tab" data-bs-target="#birthdayTab" type="button" role="tab" aria-controls="Newsfeed" aria-selected="true"><i class="fas fa-birthday-cake" style="color: #ff7f50;"></i></button>
@@ -152,7 +164,7 @@
                                         </div>
                                     </div>
                                     <div class="tab-pane fade" id="teamTab" role="tabpanel" aria-labelledby="polls-tab">
-                                        <div id="team" class=" ">
+                                        <div id="team" class="team">
                                             <p class="font-italic mb-1">
                                                 <strong><i class="fas fa-users-cog" style="color: #4169e1;"></i> Team:</strong> <span th:text="${user.team}?: 'Not provided'"></span>
                                             </p>
