almost all add7

--- a/src/main/resources/static/assets/css/group-card.css
+++ b/src/main/resources/static/assets/css/group-card.css
@@ -149,3 +149,8 @@
 .community-card .member-list .member-name:last-child:after {
     content: "...";
 }
+
+.community-card .dropdown-item:hover {
+     background-color: lightgrey;
+     color: #000;
+ }
