--- a/src/main/resources/templates/user/policy.html
+++ b/src/main/resources/templates/user/policy.html
@@ -407,17 +407,26 @@
             .catch(error => {
                 console.error('There was a problem with the fetch operation:', error);
             });
+        await notifyMessage();
         const toggleCheckbox = document.getElementById("toggle-checkbox");
         const toggleKnob = document.getElementById("toggle-knob");
+        const notiOnBell = document.getElementById('notiOnBell');
+        const notiOffBell = document.getElementById('notiOffBell');
         const userStatus = await checkStatusForUser();
         if (userStatus.isOn === 'ON') {
+            notiOnBell.style.display = 'block';
+            notiOffBell.style.display = 'none';
             toggleCheckbox.checked = false;
         } else {
+            notiOnBell.style.display = 'none';
+            notiOffBell.style.display = 'block';
             toggleCheckbox.checked = true;
         }
         toggleCheckbox.addEventListener("change", async function() {
             if (toggleCheckbox.checked) {
                 console.log("OFF");
+                notiOnBell.style.display = 'none';
+                notiOffBell.style.display = 'block';
                 const data = await fetch(`/user/turn-off-noti`,{
                     method:'PUT',
                     headers: {
@@ -461,6 +470,8 @@
                 }, 3000);
             } else {
                 console.log("ON");
+                notiOnBell.style.display = 'block';
+                notiOffBell.style.display = 'none';
                 const data = await fetch(`/user/turn-on-noti`,{
                     method:'PUT',
                     headers: {
@@ -505,6 +516,22 @@
             }
         });
     });
+
+    let notificationCount = 0;
+    async function notifyMessage(){
+        const showMessage = document.getElementById('notifyMessage');
+        const pElement = document.createElement('p');
+        pElement.classList.add('noti-p-element');
+        if (notificationCount === 0) {
+            pElement.style.display = 'block';
+            pElement.textContent = 'There is no notification yet!';
+        } else {
+            pElement.style.display = 'none';
+            pElement.textContent = '';
+        }
+        showMessage.appendChild(pElement);
+    };
+
     let currentPageForEach = '0';
     let isFetchingForEach = false;
     let hasMoreForEach = true;
