--- a/src/main/resources/templates/user/user-chat.html
+++ b/src/main/resources/templates/user/user-chat.html
@@ -251,15 +251,24 @@
 window.onload = async () => {
     const toggleCheckbox = document.getElementById("toggle-checkbox");
     const toggleKnob = document.getElementById("toggle-knob");
+    const notiOnBell = document.getElementById('notiOnBell');
+    const notiOffBell = document.getElementById('notiOffBell');
+    await notifyMessage();
     const userStatus = await checkStatusForUser();
     if (userStatus.isOn === 'ON') {
+        notiOnBell.style.display = 'block';
+        notiOffBell.style.display = 'none';
         toggleCheckbox.checked = false;
     } else {
+        notiOnBell.style.display = 'none';
+        notiOffBell.style.display = 'block';
         toggleCheckbox.checked = true;
     }
     toggleCheckbox.addEventListener("change", async function() {
         if (toggleCheckbox.checked) {
             console.log("OFF");
+            notiOnBell.style.display = 'none';
+            notiOffBell.style.display = 'block';
             const data = await fetch(`/user/turn-off-noti`,{
                 method:'PUT',
                 headers: {
@@ -303,6 +312,8 @@ window.onload = async () => {
             }, 3000);
         } else {
             console.log("ON");
+            notiOnBell.style.display = 'block';
+            notiOffBell.style.display = 'none';
             const data = await fetch(`/user/turn-on-noti`,{
                 method:'PUT',
                 headers: {
@@ -347,6 +358,22 @@ window.onload = async () => {
         }
     });
 }
+
+    let notificationCount = 0;
+    async function notifyMessage(){
+        const showMessage = document.getElementById('notifyMessage');
+        const pElement = document.createElement('p');
+        pElement.classList.add('noti-p-element');
+        if (notificationCount === 0) {
+            pElement.style.display = 'block';
+            pElement.textContent = 'There is no notification yet!';
+        } else {
+            pElement.style.display = 'none';
+            pElement.textContent = '';
+        }
+        showMessage.appendChild(pElement);
+    };
+
     let currentPageForEach = '0';
     let isFetchingForEach = false;
     let hasMoreForEach = true;
